syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "GrpcClientTests";
option objc_class_prefix = "HLW";

service GrpcClientTest {
  rpc SayHello(GrpcClientRequest) returns (GrpcClientResponse) {}
}

message GrpcClientRequest {
  string name = 1;
}

message GrpcClientResponse {
  string message = 1;
}

